--- a/src/testpattern/run-testpattern-2.in
+++ b/src/testpattern/run-testpattern-2.in
@@ -8,7 +8,8 @@ use strict;
 my $valgrind = 0;
 my $cachegrind = 0;
 my $gdb_attach = 0;
-my $calc_md5 = 0;
+my $calc_md5_file = undef;
+my $calc_md5_dir = undef;
 my $dontrun = 0;
 my $retval = 0;
 my $testpattern_command;
@@ -35,7 +36,7 @@ my $quiet = 0;
 
 my @default_options = ();
 my %base_settings = ("DitherAlgorithm" => "Fast",
-		     "ColorCorrection" => "Raw");
+		     "ColorCorrection" => "Uncorrected");
 
 my %param_types;
 my %param_classes;
@@ -55,13 +56,10 @@ GetOptions("v+"  => \$valgrind,
 	   "f=s" => \@families,
 	   "O=s" => \$output,
 	   "d=s" => \@default_options,
-	   "m:s" => \$calc_md5);
+	   "m:s" => \$calc_md5_dir,
+	   "M:s" => \$calc_md5_file);
 
 my $pages = $std_pages;
-
-if (defined $calc_md5 && $calc_md5 eq "0") {
-    $calc_md5 = undef;
-}
 
 if (! @special_options) {
     @special_options = @standard_options;
@@ -255,6 +253,35 @@ sub do_print {
     }
 }
 
+sub do_output($) {
+    my ($outkey) = @_;
+    if (defined $output || defined $calc_md5_dir ||
+	defined $calc_md5_file) {
+	my $md5_cmd;
+	my $outbase = "${outkey}.prn";
+	my $outfile = "$output/$outbase";
+	if (defined $calc_md5_file) {
+	    $md5_cmd = "md5sum -b | sed 's/-/$outbase/' >> '$calc_md5_file'";
+	} elsif (defined $calc_md5_dir) {
+	    my $md5_dir = $calc_md5_dir;
+	    if (defined $calc_md5_dir && $calc_md5_dir eq "") {
+		$md5_dir = $output;
+	    }
+	    my $md5file = "$md5_dir/${outkey}.md5";
+	    if (! $md5_dir) {
+		$md5file = "${outkey}.md5";
+	    }
+	    $md5_cmd = "md5sum -b | sed 's/-/$outbase/' > '$md5file'";
+	}
+	if ($output && $md5_cmd ne "") {
+	    push @job_extras, "output \"|tee '$outfile' | $md5_cmd\";\n";
+	} elsif ($output) {
+	    push @job_extras, "output \"$outfile\";\n";
+	} else {
+	    push @job_extras, "output \"|$md5_cmd\";\n";
+	}
+    }
+}
 
 sub do_printer {
     my ($printer, $fh) = @_;
@@ -321,26 +348,7 @@ sub do_printer {
 		set_opt("PrintingMode", $pmode, $printer);
 		set_opt("Resolution", $resolution, $printer);
 		map { set_opt($_, $base_settings{$_}, $printer)} keys %base_settings;
-		if (defined $output || defined $calc_md5) {
-		    my $outkey = "${printer}_PrintingMode_${pmode}_Resolution_${resolution}";
-		    my $md5_dir = $calc_md5;
-		    if (defined $calc_md5 && $calc_md5 eq "") {
-			$md5_dir = $output;
-		    }
-		    my $outbase = "${outkey}.prn";
-		    my $outfile = "$output/$outbase";
-		    my $md5file = "$md5_dir/${outkey}.md5";
-		    if (! $md5_dir) {
-			$md5file = "${outkey}.md5";
-		    }
-		    if ($output && $calc_md5) {
-			push @job_extras, "output \"|tee '$outfile' | md5sum -b | sed 's/-/$outbase/' > '$md5file'\";\n";
-		    } elsif ($output) {
-			push @job_extras, "output \"$outfile\";\n";
-		    } else {
-			push @job_extras, "output \"|md5sum -b | sed 's/-/$outbase/' > '$md5file'\";\n";
-		    }
-		}
+		do_output("${printer}_PrintingMode_${pmode}_Resolution_${resolution}");
 		set_message("    ${pmode}+${resolution}");
 		my $output = print_one_testpattern($printer);
 		do_print( $output, $fh );
@@ -381,29 +389,10 @@ sub do_printer {
 			    }
 			}
 		    } keys %base_settings;
-		    if (defined $output || defined $calc_md5) {
-#			my $outkey = "${printer}_PrintingMode_${pmode}_Resolution_${min_res_name}_${key}_${opt}";
-			my $outkey = "${printer}_PrintingMode_${pmode}_Resolution_${key}_${opt}";
-			my $md5_dir = $calc_md5;
-			if (defined $calc_md5 && $calc_md5 eq "") {
-			    $md5_dir = $output;
-			}
-			my $outbase = "${outkey}.prn";
-			my $outfile = "$output/$outbase";
-			my $md5file = "$md5_dir/${outkey}.md5";
-			if (! $md5_dir) {
-			    $md5file = "${outkey}.md5";
-			}
-			if (defined $output && defined $calc_md5) {
-			    push @job_extras, "output \"|tee '$outfile' | md5sum -b | sed 's/-/$outbase/' > '$md5file'\";\n";
-			} elsif ($output) {
-			    push @job_extras, "output \"$outfile\";\n";
-			} else {
-			    push @job_extras, "output \"|md5sum -b | sed 's/-/$outbase/' > '$md5file'\";\n";
-			}
-		    }
-#		    set_message("    ${key}=${opt}+${pmode}+${min_res_name}");
+		    do_output("${printer}_PrintingMode_${pmode}_${key}_${opt}");
 		    set_message("    ${key}=${opt}+${pmode}");
+#		    do_output("${printer}_PrintingMode_${pmode}_Resolution_${min_res_name}_${key}_${opt}");
+#		    set_message("    ${key}=${opt}+${pmode}+${min_res_name}");
 		    my $output = print_one_testpattern($printer, $rawval);
 		    do_print( $output, $fh );
 		}
@@ -441,13 +430,21 @@ if ($dontrun) {
 	mkdir $output || die "Can't create directory $output: $!\n";
     }
 
-    if (defined $calc_md5 && $calc_md5 ne "" && ! -d $calc_md5) {
-	mkdir $calc_md5 || die "Can't create directory $calc_md5: $!\n";
+    if (defined $calc_md5_dir && $calc_md5_dir ne "" && ! -d $calc_md5_dir) {
+	mkdir $calc_md5_dir || die "Can't create directory $calc_md5_dir: $!\n";
+    }
+
+    if (defined $calc_md5_file) {
+	unlink $calc_md5_file;
+	system "touch $calc_md5_file";
     }
 
     my $status = 1;
     my ($suppress);
-    if (! defined $output && ! defined $calc_md5) { $suppress = '-n'; }
+    if (! defined $output && ! defined $calc_md5_dir &&
+	! defined $calc_md5_file) {
+	$suppress = '-n';
+    }
     my ($qopt) = $quiet ? "-q" : "";
     $testpattern_command = "$valgrind_command ./testpattern $suppress $qopt";
     open TESTPATTERN, "|$testpattern_command" or
