Don't forcibly default color correction to raw.

--- a/src/testpattern/run-testpattern-2.in
+++ b/src/testpattern/run-testpattern-2.in
@@ -35,8 +35,7 @@ my $skip_resolutions = 0;
 my $quiet = 0;
 
 my @default_options = ();
-my %base_settings = ("DitherAlgorithm" => "Fast",
-		     "ColorCorrection" => "Uncorrected");
+my %base_settings = ("DitherAlgorithm" => "Fast");
 
 my %param_types;
 my %param_classes;
