--- a/src/xml/escp2/media/Makefile.am
+++ b/src/xml/escp2/media/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.6 2008/07/05 03:43:26 rlk Exp $
+## $Id: Makefile.am,v 1.7 2008/07/05 18:56:42 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -55,6 +55,7 @@ pkgxmldata_DATA =				\
 	pro_gen2.xml				\
 	pro_pigment.xml				\
 	pro_ultrachrome.xml			\
+	pro_ultrachrome_k3.xml			\
 	r800.xml				\
 	standard.xml				\
 	standard_gen0.xml			\
