Don't filter out "none" (default) value for options.

--- a/src/testpattern/run-testpattern-2.in
+++ b/src/testpattern/run-testpattern-2.in
@@ -305,7 +305,7 @@ sub build_list($$) {
 	push @tmp, ($defv + $maxv) / 2.0;
 	push @tmp, $maxv;
     } elsif (defined($param_types{$printer}{$key})) {
-	@tmp = grep {$_ ne 'None' } keys %{$stpdata{$printer}{$key}};
+	@tmp = keys %{$stpdata{$printer}{$key}};
     }
     if (! @tmp) {
 	return @stuff;
