--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.193 2008/07/11 02:06:18 rlk Exp $
+dnl $Id: configure.ac,v 1.194 2008/07/12 02:27:51 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -49,7 +49,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.193 $)
+AC_REVISION($Revision: 1.194 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -1028,7 +1028,7 @@ if test "$BUILD_CUPS" != "no" ; then
 	warnings_emitted=1
     fi
     if test "`uname`" = Darwin ; then
-        if "x$cups_bundledir" = "x"; then
+        if test "x$cups_bundledir" = "x"; then
 	    echo "        Install CUPS as bundle:                 no"
 	else
 	    echo "        Install CUPS as bundle:                 yes, $cups_bundledir"
