Make sure to set error status if subprocess dies from a signal.

--- a/src/testpattern/run-testpattern-2.in
+++ b/src/testpattern/run-testpattern-2.in
@@ -516,6 +516,7 @@ if ($dontrun) {
 		die "Can't run $testpattern_command: $!\n";
 	    do_printer($printer, \*TESTPATTERN);
 	    $status |= close TESTPATTERN;
+	    $status |= ($? & 255);
 	    last if ($? & 255);
 	}
     } else {
