Localize INFO, ERROR, and WARNING messages in CUPS raster driver, and make several of them more user-friendly and without the "Gutenprint" prefix.
Update DEBUG messages to use a consistent "Gutenprint:" prefix.

Update .cvsignore file to account for current executable names.

--- a/src/cups/.cvsignore
+++ b/src/cups/.cvsignore
@@ -2,15 +2,16 @@
 .libs
 Makefile
 Makefile.in
-canon
 commandtocanon
 commandtoepson
 cups-calibrate
-cups-genppd.5.1
-cups-genppdconfig.5.1
-cups-genppdupdate.5.1
-epson
+cups-genppd.5.2
+cups-genppdupdate
 genppd
+gutenprint.5.2
+po2strings
 ppd
-rastertogutenprint.5.1
 ppd-stamp
+rastertogutenprint.5.2
+test-rastertogutenprint
+
