--- a/src/cups/Info.plist.in
+++ b/src/cups/Info.plist.in
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>rastertogutenprint.5.2</string>
+	<string>rastertogutenprint.@GUTENPRNT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.cups.gutenprint</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -15,6 +15,6 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>5.2</string>
+	<string>@GUTENPRNT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@.@GUTENPRINT_MICRO_VERSION@</string>
 </dict>
 </plist>
