--- a/src/cups/test-rastertogutenprint.in
+++ b/src/cups/test-rastertogutenprint.in
@@ -52,6 +52,21 @@ if [ ! -x "$cupsdir/cgpdftoraster" -a ! -x "$cupsdir/pdftops" ] ; then
     exit 0
 fi
 
+cleanup() {
+    if [ -f "$tfile" ] ; then
+	rm -f $tfile
+    fi
+    exit 1
+}
+
+pdftops="`type -p pdftops`"
+
+if [ -n "$pdftops" -a ! -x "$cupsdir/cgpdftoraster" ] ; then
+    tfile=`mktemp`
+    trap cleanup 1 2 3 6 14 15 30
+    $pdftops -f 24 -l 26 ../../doc/gutenprint-users-manual.pdf $tfile
+fi
+
 if [ -z "$verbose" ] ; then
     STP_SUPPRESS_MESSAGES=1
     export STP_SUPPRESS_MESSAGES
@@ -157,6 +172,8 @@ if [ -d ppd/C ] ; then
 	    export PPD
 	    if [ -x "$cupsdir/cgpdftoraster" ] ; then
 		output="`($cupsdir/cgpdftoraster 1 1 1 1 $pages < ../../doc/gutenprint-users-manual.pdf 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
+	    elif [ -f "$tfile" ] ; then
+		output="`($cupsdir/pstops 1 1 1 1 \"$cupsargs\" < $tfile 2>/dev/null | $cupsdir/pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
 	    elif [ -x "$cupsdir/pstoraster" ] ; then
 		output="`($cupsdir/pdftops 1 1 1 1 \"$pages$cupsargs\" < ../../doc/gutenprint-users-manual.pdf 2>/dev/null | $cupsdir/pstops 1 1 1 1 \"$pages$cupsargs\" 2>/dev/null | $cupsdir/pstoraster 2>/dev/null | run_rastertogp > /dev/null) 2>&1`"
 	    else
@@ -172,5 +189,8 @@ if [ -d ppd/C ] ; then
 	    fi
 	fi
     done
+fi
+if [ -f "$tfile" ] ; then
+    rm -f $tfile
 fi
 exit $retval
