--- a/src/cups/cups-genppdupdate.in
+++ b/src/cups/cups-genppdupdate.in
@@ -1,5 +1,5 @@
 #! @PERL@ -w
-# $Id: cups-genppdupdate.in,v 1.47 2008/07/27 02:59:45 rlk Exp $
+# $Id: cups-genppdupdate.in,v 1.48 2008/07/27 03:18:27 rlk Exp $
 # Update CUPS PPDs for Gutenprint queues.
 # Copyright (C) 2002-2003 Roger Leigh (rleigh@debian.org)
 #
@@ -436,18 +436,13 @@ sub update_ppd ($) {
     }
     if ($debug & 2) {
 	print "Gutenprint Filename: $filename\n";
-	if ($opt_r eq "" || $opt_r >= 5.2) {
-	    print "Locale: $locale (ignored for Gutenprint >= 5.2)\n";
-	} elsif ($opt_l) {
+	if ($opt_l) {
 	    print "Locale: $locale (from -l)\n";
 	} else {
 	    print "Locale: $locale\n";
 	}
 	print "Language: $lingo\n";
 	print "Driver: $driver\n";
-    }
-    if ($opt_r eq "" || $opt_r >= 5.2) {
-	$locale = "C";
     }
     if ($locale) {
 	# Split into the language and territory.
