--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.201 2008/08/13 07:35:50 easysw Exp $
+dnl $Id: configure.ac,v 1.202 2008/08/14 00:23:41 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -49,7 +49,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.201 $)
+AC_REVISION($Revision: 1.202 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -478,6 +478,7 @@ dnl aclocal flags.
 dnl AM_ACLOCAL_INCLUDE(m4 m4local)
 
 dnl Checks for programs.
+AM_ICONV_LINK
 AC_ISC_POSIX
 AC_PROG_AWK
 AC_PROG_CC
